tests/hm_typing/container_constraint.sy
f: fn<a: Container> *a -> *a : fn a: * -> * do
    a
end

start :: fn do
    f' {1, 2, 3}
    f' [1, 2, 3]
    f' 1
end

// error: $Violating
